--- a/src/main/resources/com/brh/pruefungsvorb_2531/mainView.fxml
+++ b/src/main/resources/com/brh/pruefungsvorb_2531/mainView.fxml
@@ -1,16 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="controller.MainController">
+<VBox prefHeight="645.0" prefWidth="506.0" spacing="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="controller.MainController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+   <children>
+      <HBox prefHeight="27.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Park Id" />
+            <TextField prefHeight="26.0" prefWidth="341.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="30.0" layoutY="30.0" prefHeight="26.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Baum Id" />
+            <TextField prefHeight="26.0" prefWidth="344.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="30.0" layoutY="68.0" prefHeight="26.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Baum Name" />
+            <TextField prefHeight="26.0" prefWidth="343.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="30.0" layoutY="104.0" prefHeight="26.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Baum Alter" />
+            <TextField prefHeight="26.0" prefWidth="342.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="30.0" layoutY="141.0" prefHeight="26.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Baum Familie" />
+            <ComboBox prefHeight="26.0" prefWidth="345.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="30.0" layoutY="178.0" prefHeight="26.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Baum ist krank" />
+            <CheckBox mnemonicParsing="false" text="ja" />
+         </children>
+      </HBox>
+      <HBox layoutX="30.0" layoutY="215.0" prefHeight="26.0" prefWidth="424.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="156.0" text="Baum Hinzufügen" />
+         </children>
+      </HBox>
+      <Separator prefWidth="200.0">
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
+      </Separator>
+      <HBox layoutX="30.0" layoutY="30.0" prefHeight="27.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Park Id" />
+            <TextField prefHeight="26.0" prefWidth="345.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="30.0" layoutY="308.0" prefHeight="27.0" prefWidth="424.0">
+         <children>
+            <Label prefHeight="27.0" prefWidth="125.0" text="Park Name" />
+            <TextField prefHeight="26.0" prefWidth="345.0" />
+         </children>
+      </HBox>
+      <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="469.0" text="Bäume des Parks auflisten" />
+      <TableView prefHeight="281.0" prefWidth="466.0">
+        <columns>
+          <TableColumn prefWidth="78.20000839233398" text="ID" />
+          <TableColumn prefWidth="72.20001220703125" text="Name" />
+            <TableColumn prefWidth="96.20002746582031" text="Alter" />
+            <TableColumn prefWidth="54.20001220703125" text="Ist krank" />
+            <TableColumn prefWidth="122.39996337890625" text="Familie" />
+        </columns>
+      </TableView>
+   </children>
 </VBox>
