--- a/src/main/resources/com/brh/pruefungsvorb_2531/mainView.fxml
+++ b/src/main/resources/com/brh/pruefungsvorb_2531/mainView.fxml
@@ -58,7 +58,7 @@
       <HBox layoutX="30.0" layoutY="30.0" prefHeight="27.0" prefWidth="424.0">
          <children>
             <Label prefHeight="27.0" prefWidth="125.0" text="Park Id" />
-            <TextField fx:id="parkIdTf" prefHeight="26.0" prefWidth="345.0" />
+            <TextField fx:id="parkIdListTf" prefHeight="26.0" prefWidth="345.0" />
          </children>
       </HBox>
       <HBox layoutX="30.0" layoutY="308.0" prefHeight="27.0" prefWidth="424.0">
