Daten in TableView anzeigen

--- a/src/main/resources/com/brh/pruefungsvorb_2531/mainView.fxml
+++ b/src/main/resources/com/brh/pruefungsvorb_2531/mainView.fxml
@@ -83,5 +83,6 @@
             <TableColumn fx:id="tableColFamily" prefWidth="122.39996337890625" text="Familie" />
         </columns>
       </TableView>
+      <Button mnemonicParsing="false" onAction="#onClickDeleteTree" onMouseReleased="#onClickTableRow" text="Ausgewählten Baum Löschen" />
    </children>
 </VBox>
